finished setups and added merchant strategy

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -58,7 +58,7 @@
             "error",
             "windows"
         ],
-        "no-multi-spaces": "error",
+        "no-multi-spaces": "off",
         "no-tabs": [
             "error",
             {
